--- a/stylesheets/modules/circuits.styl
+++ b/stylesheets/modules/circuits.styl
@@ -1,14 +1,4 @@
 .circuits
   height 100vh
   overflow hidden
-
-  .canvas-container
-    height 100%
-    width 100%
-
-  .tool-box
-    position absolute
-    width 100px
-    height 100%
-    background-color #d8d8d8
-    box-shadow 1px 1px 17px -2px rgba(0, 0, 0, .25)
+  vertical-align top
