--- a/stylesheets/components/segments.styl
+++ b/stylesheets/components/segments.styl
@@ -1,8 +1,14 @@
 .lines
   position absolute
   visibility hidden
+
+  
+
   .segment
     visibility visible
     position absolute
     background-color #3f3f3f
     margin 0
+
+    &.-power
+      background-color green
