--- a/stylesheets/components/toolbox.styl
+++ b/stylesheets/components/toolbox.styl
@@ -14,8 +14,15 @@
         width 80px
         height 80px
         background-color white
-        padding 20px 10px
         margin-bottom 10px
 
         &.-selected
             background-color cyan 
+
+        .gate
+            position absolute
+            top 0
+            bottom 0
+            left 0
+            right 0
+            margin auto
