--- a/stylesheets/components/gate.styl
+++ b/stylesheets/components/gate.styl
@@ -1,5 +1,6 @@
 .gate
   position relative
+  box-sizing content-box
 
   .coords
     color black
@@ -30,3 +31,6 @@
         border-color #3f3f3f
         &.-power
           border-color green
+
+  &.-selected
+    border 1px solid rgba(50, 50, 200, .5)
