--- a/stylesheets/settings/colors.styl
+++ b/stylesheets/settings/colors.styl
@@ -17,8 +17,10 @@ $line-blue = #2000d5
 
 $font-grey = #5F5F5F
 $font-white = #F0F0F0
-$font-black = #272727
+$font-black = #212121
 
+// $border-color = #efe9df
+$border-color = #7A94B1
 
 //ACTIONS COLORS
 $hover-red = #E35A55
