--- a/stylesheets/settings/resets.styl
+++ b/stylesheets/settings/resets.styl
@@ -10,7 +10,7 @@ th, td, tr, aside, caption, sup, sub, q, small
 	margin 0
 	border 0
 	text-decoration none
-	color $font-white
+	color $font-black
 	font-family $main-font-family, "arial", "sans-serif"
 	font-weight 100 
 	letter-spacing .4px
