--- a/stylesheets/components/toolbox.styl
+++ b/stylesheets/components/toolbox.styl
@@ -3,26 +3,66 @@
     display inline-block
     position relative
     vertical-align top
-    width 100px
+    width 180px
     height 100%
-    padding 10px
-    background-color #d8d8d8
-    box-shadow 1px 1px 17px -2px rgba(0, 0, 0, .25)
+    background-color white
+    border-right 1px solid $border-color
+    box-shadow 0px 3px 3px 0px rgba(0,0,0,0.5)
+
+    > *
+        border-bottom 1px solid $border-color
+
+    .search-bar
+        padding 10px
 
     .gate-container
         position relative
-        width 80px
-        height 80px
+        width 70px
+        height 70px
         background-color white
         margin-bottom 10px
+        border 1px solid $border-color
+        cursor pointer
+
 
         &.-selected
-            background-color cyan 
+            border 1px solid $font-black
 
         .gate
             position absolute
-            top 0
-            bottom 0
+            top 5px
             left 0
             right 0
             margin auto
+        
+        span
+            position absolute
+            bottom 5px
+            left 0
+            right 0
+            text-align center
+
+    .toolbox-section
+        position relative
+        background-color $border-color
+
+        .title
+            padding 10px
+            cursor pointer
+
+        .children
+            background-color white
+            padding 10px
+
+            &.-closed
+                height 0
+                padding 0
+                overflow hidden
+
+        .collapse-btn
+            pointer-events none
+            position absolute
+            top 10px
+            right 10px
+            height 1em
+            width 1em
