--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
 		<title>Home</title>
 		<link rel="icon" href="/assets/images/ret.ico" type="image/ico" />
 		<link rel="stylesheet" type="text/css" href="/build/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
+		<link href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet">
         
 	</head>
 	<body>
