[master] Refactoring render logic

--- a/stylesheets/components/gate.styl
+++ b/stylesheets/components/gate.styl
@@ -8,13 +8,13 @@
   .terminal-container
     position absolute
     .terminal
-      visibility hidden
+      // visibility hidden
       box-sizing content-box
       position absolute
       border 3px solid #3f3f3f
-      border-radius 50%
-      width 0
-      height 0
+      background-color: white
+      width 3px
+      height 3px
 
       &.-connected
         visibility visible
